# ComfyUI-Attention-Distillation

./: LICENSE  README.md  __init__.py  attention_distillation.py  comfyui_nodes.py  handlers.py  losses.py  pipeline_flux.py  pipeline_sd.py  pipeline_sdxl.py  pyproject.toml  requirements.txt  train_vae.py  utils.py
.github/workflows/: publish.yml
workflows/: style_t2i_generation_flux.json  style_t2i_generation_sd15.json  style_t2i_generation_sdxl.json  style_transfer_sd15.json
